--- a/packages/category/package.json
+++ b/packages/category/package.json
@@ -2,12 +2,17 @@
   "name": "cat",
   "version": "1.0.0",
   "scripts": {
-    "start": "webpack serve --config config/webpack.dev.js",
+    "start": "webpack serve --config config/webpack.dev.js & json-server --watch db.json --port 3001",
     "build": "webpack --config config/webpack.prod.js"
   },
   "dependencies": {
+    "@emotion/styled": "^11.11.0",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@mui/material": "^5.14.18",
+    "@mui/x-data-grid": "^6.18.2",
+    "json-server": "^0.17.4",
+    "postal": "^2.0.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0"
