--- a/packages/container/package.json
+++ b/packages/container/package.json
@@ -8,6 +8,10 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
+    "@mui/icons-material": "latest",
+    "@mui/material": "latest",
     "postal": "^2.0.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -26,6 +30,7 @@
     "webpack": "^5.88.0",
     "webpack-cli": "^4.1.0",
     "webpack-dev-server": "^4.15.1",
-    "webpack-merge": "^5.2.0"
+    "webpack-merge": "^5.2.0",
+    "react-scripts": "latest"
   }
 }
