--- a/packages/account/package.json
+++ b/packages/account/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.1",
   "scripts": {
     "start": "webpack serve --config config/webpack.dev.js & json-server --watch db.json --port 3002",
-    "build": "webpack --config config/webpack.prod.js"
+    "build": "webpack --config config/webpack.prod.js & json-server --watch db.json --port 3002"
   },
   "dependencies": {
     "@emotion/styled": "^11.11.0",
